--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -84,8 +84,8 @@ jobs:
       run: terraform init
 
     # Checks that all Terraform configuration files adhere to a canonical format
-    - name: Terraform Format
-      run: terraform fmt -check
+    #- name: Terraform Format
+    #  run: terraform fmt -check
 
      # Set-Output command using Environment Variables
     #- name: Save State
